FreedomSanboxAntDeploy/src/objects/Checklist_Step__c.object
<CustomObject>
    <fields>
        <fullName>Checklist__c</fullName>
        <label>Checklist</label>
        <referenceTo>Checklist__c</referenceTo>
        <relationshipLabel>Checklist Steps</relationshipLabel>
        <relationshipName>Checklist_Steps11</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Context__c</fullName>
        <label>Context</label>
        <picklist>
            <picklistValues>
                <fullName>Prospecting-Initation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educating Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreement-Send</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreement-Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment-Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fllow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data-Collection-Initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collection Over stretching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Reivew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Creation-Initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DraftPlan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Interaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Interaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidated Account Statement Send</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client-Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adhoc/ Periodic requirement from the internel team for analysis purpose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Yearly Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual client meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assignment-send</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal Agreement-signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason of Leaving</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will-join-Later</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data-Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan-Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan-Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan-Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan-Reviewing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Indicator__c</fullName>
        <formula>IF( ISPICKVAL( Step_Status__c , &quot;Not Started&quot;) , 
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 10, 10), 
IF( ISPICKVAL(Step_Status__c, &quot;In Process&quot;) , 
IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 10, 10), 
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 10, 10) 
) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_Status__c</fullName>
        <label>Step Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Checklist Step</label>
    <nameField>
        <label>Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklist Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>